[gd_scene load_steps=6 format=2]

[ext_resource path="res://Juego/UI/MiniMapa/mini_mapa.png" type="Texture" id=1]
[ext_resource path="res://Juego/UI/MiniMapa/Player.png" type="Texture" id=2]
[ext_resource path="res://Juego/UI/MiniMapa/MiniMapa.gd" type="Script" id=3]
[ext_resource path="res://Juego/UI/MiniMapa/baseenemiga_3.png" type="Texture" id=4]
[ext_resource path="res://Juego/UI/MiniMapa/estacionrecarga.png" type="Texture" id=5]

[node name="MiniMapa" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -158.4
margin_top = -176.0
margin_right = 159.6
rect_min_size = Vector2( 318, 176 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cuadrominimapa" type="NinePatchRect" parent="."]
margin_right = 318.0
margin_bottom = 176.0
texture = ExtResource( 1 )

[node name="contenedoriconos" type="MarginContainer" parent="cuadrominimapa"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZonaRenderMiniMapa" type="TextureRect" parent="cuadrominimapa/contenedoriconos"]
margin_right = 308.0
margin_bottom = 166.0

[node name="IconoPlayer" type="Sprite" parent="cuadrominimapa/contenedoriconos/ZonaRenderMiniMapa"]
position = Vector2( 153.235, 79.29 )
rotation = 1.5708
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="IconoBaseEnemiga" type="Sprite" parent="cuadrominimapa/contenedoriconos/ZonaRenderMiniMapa"]
modulate = Color( 1, 0.054902, 0.054902, 1 )
position = Vector2( 249.452, 131.853 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="IconoEstacion" type="Sprite" parent="cuadrominimapa/contenedoriconos/ZonaRenderMiniMapa"]
modulate = Color( 0, 1, 0.905882, 1 )
position = Vector2( 244.997, 39.1996 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 5 )
